--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0  user-scalable=no"
+      content="width=2560, height=1440, initial-scale=1.0  user-scalable=no"
     />
     <title>mco-intro</title>
   </head>
